# muenster_lubri_beam

./: Makefile.am  README.md  manufactured_solution.map  muenster_lubri_beam.cc  plot_beam.gp  plot_displ_and_energy.gp  plot_h_lubri.gp  plot_muenster.gp  plot_muenster_lubri_beam.gp  run_it.bash  validate_plot_muenster.gp
